--- a/assets/scss/utilities/_theme-toggle.scss
+++ b/assets/scss/utilities/_theme-toggle.scss
@@ -163,7 +163,7 @@ nav[data-variant="main"] #theme-toggle {
   --color-bg-mod-1: #f7f2ed;
   --color-bg-mod-2: oklch(97% .001 106.424);
   --color-border: oklch(85% .035 80/.4);
-  --color-brand: oklch(30% .01 67.558);
+  --color-brand: oklch(18.5% .1 120); // Dark green from dark mode for links
   --color-accent: oklch(45% .12 125);
   --color-highlight: oklch(85% .02 80/.5);
 }
